maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:80: error: not found: value trouverleNord
  trouverleNord()
  ^